--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,59 @@ jsonschema
 jsonref
 jsonschema
 openapi_schema_validator
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+altair==5.5.0
+attrs==24.3.0
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.12.14
+charset-normalizer==3.4.0
+click==8.1.7
+frozenlist==1.5.0
+gitdb==4.0.11
+gitpython==3.1.43
+idna==3.10
+jinja2==3.1.4
+jsonref==1.1.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+mdurl==0.1.2
+multidict==6.1.0
+narwhals==1.19.0
+numpy==2.2.0
+openai==0.28.1
+openapi-schema-validator==0.6.2
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+propcache==0.2.1
+protobuf==5.29.2
+pyarrow==18.1.0
+pydeck==0.9.1
+pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+pyyaml==6.0.2
+referencing==0.35.1
+requests==2.32.3
+rfc3339-validator==0.1.4
+rich==13.9.4
+rpds-py==0.22.3
+six==1.17.0
+smmap==5.0.1
+streamlit==1.41.1
+tenacity==9.0.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing-extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+watchdog==6.0.0
+yarl==1.18.3
+pinecone-client==2.3.0  # Added this line
