--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,3 @@
-openai==0.28.1
-python-dotenv
-pyyaml
-streamlit
-jsonschema
-jsonref
-jsonschema
-openapi_schema_validator
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiosignal==1.3.2
@@ -61,4 +53,4 @@ tzdata==2024.2
 urllib3==2.2.3
 watchdog==6.0.0
 yarl==1.18.3
-pinecone-client==2.3.0  # Added this line
+pinecone-client==5.0.1  # Updated to a valid version
